--- a/todo/package.json
+++ b/todo/package.json
@@ -9,9 +9,9 @@
     },
     "dependencies": {
         "axios": "^0.16.2",
-        "body-parser": "^1.5.2",
+        "body-parser": "^1.18.3",
         "bootstrap": "^4.0.0-beta.2",
-        "express": "~4.7.2",
+        "express": "^4.16.4",
         "method-override": "~2.1.2",
         "mongoose": "~4.0.0",
         "morgan": "^1.9.0",
@@ -19,14 +19,14 @@
         "vue-axios": "^2.0.2"
     },
     "devDependencies": {
-        "prettier": "^1.9.2",
-        "babel-core": "^6.26.0",
+        "babel-core": "^6.26.3",
         "babel-loader": "^7.1.2",
         "babel-preset-env": "^1.6.0",
         "babel-preset-stage-3": "^6.24.1",
         "cross-env": "^5.0.5",
         "css-loader": "^0.28.7",
         "file-loader": "^1.1.4",
+        "prettier": "^1.9.2",
         "vue-loader": "^13.0.5",
         "vue-template-compiler": "^2.4.4",
         "webpack": "^3.6.0",
