--- a/todo/package.json
+++ b/todo/package.json
@@ -12,8 +12,8 @@
         "body-parser": "^1.18.3",
         "bootstrap": "^4.0.0-beta.2",
         "express": "^4.16.4",
-        "method-override": "~2.1.2",
-        "mongoose": "~4.0.0",
+        "method-override": "^3.0.0",
+        "mongoose": "^5.3.10",
         "morgan": "^1.9.0",
         "vue": "^2.5.11",
         "vue-axios": "^2.0.2"
